--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "clientScripts": [
     {
-      "script": "dist/video-watch-client-plugin.js",
+      "script": "dist/client/video-watch-client-plugin.js",
       "scopes": [
         "video-watch",
         "embed"
       ]
     },
     {
-      "script": "dist/video-edit-client-plugin.js",
+      "script": "dist/client/video-edit-client-plugin.js",
       "scopes": [
         "video-edit"
       ]
@@ -29,22 +29,32 @@
     "assets/style.css"
   ],
   "dependencies": {
-    "marked": "^2.1"
+    "marked": "^4.0"
   },
   "devDependencies": {
+    "@types/marked": "^4.0",
+    "@peertube/peertube-types": "^4.2",
+    "@types/video.js": "^7.3",
     "@purtuga/esm-webpack-plugin": "^1.0",
     "webpack": "^4.0",
     "webpack-cli": "^4.0",
-    "standard": "^14.0"
+    "standard": "^14.0",
+    "@tsconfig/node12": "^1.0",
+    "typescript": "^4.3",
+    "ts-loader": "^8.3",
+    "npm-run-all": "^4.1"
   },
   "keywords": [
     "peertube",
     "plugin"
   ],
-  "library": "./main.js",
+  "library": "./dist/server/main.js",
   "scripts": {
+    "clean:light": "rm -rf dist/*",
     "prepare": "npm run build",
-    "build": "webpack",
+    "build:webpack": "webpack --mode production",
+    "build:server": "npx -p typescript tsc --build server/tsconfig.json",
+    "build": "npm-run-all -s clean:light -p build:webpack build:server",
     "test": "standard"
   },
   "translations": {
