--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "assets/style.css"
   ],
   "dependencies": {
-    "marked": "^4.0"
+    "marked": "^4.0",
+    "short-uuid": "^4.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17",
     "@types/marked": "^4.0",
     "@peertube/peertube-types": "^4.2",
     "@types/video.js": "^7.3",
