--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@purtuga/esm-webpack-plugin": "^1.0",
     "webpack": "^4.0",
     "webpack-cli": "^4.0",
-    "standard": "^14.0",
+    "ts-standard": "^11.0",
     "@tsconfig/node12": "^1.0",
     "typescript": "^4.3",
     "ts-loader": "^8.3",
