--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "peertube-plugin-chapters",
   "description": "PeerTube chapter plugin",
   "license": "(MIT OR Apache-2.0)",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "author": "samlich",
   "homepage": "https://samli.ch/peertube-chapters",
   "repository": "https://github.com/samlich/peertube-plugin-chapters",
@@ -29,25 +29,28 @@
     "assets/style.css"
   ],
   "dependencies": {
-    "marked": "^4.0",
+    "marked": "^4.1.1",
     "short-uuid": "^4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.19",
+    "@babel/preset-env": "^7.19",
+    "@peertube/peertube-types": "^4.2",
+    "@purtuga/esm-webpack-plugin": "^1.0",
+    "@tsconfig/node12": "^1.0",
     "@types/express": "^4.17",
     "@types/jest": "^29.0",
-    "@types/marked": "^4.0",
-    "@peertube/peertube-types": "^4.2",
+    "@types/marked": "^4.0.7",
     "@types/video.js": "^7.3",
-    "@purtuga/esm-webpack-plugin": "^1.0",
+    "babel-loader": "^8.2",
     "jest": "^29.0",
+    "npm-run-all": "^4.1",
     "ts-jest": "^29.0",
-    "webpack": "^4.0",
-    "webpack-cli": "^4.0",
-    "ts-standard": "^11.0",
-    "@tsconfig/node12": "^1.0",
-    "typescript": "^4.3",
     "ts-loader": "^8.3",
-    "npm-run-all": "^4.1"
+    "ts-standard": "^11.0",
+    "typescript": "^4.3",
+    "webpack": "^4.46",
+    "webpack-cli": "^4.0"
   },
   "keywords": [
     "peertube",
