--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "peertube-plugin-chapters",
   "description": "PeerTube chapter plugin",
   "license": "(MIT OR Apache-2.0)",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "author": "samlich",
-  "homepage": "https://samli.ch/peertube-chapters",
+  "homepage": "https://samli.ch/projects/peertube-chapters",
   "repository": "https://github.com/samlich/peertube-plugin-chapters",
-  "bugs": "https://github.com/samlich/peertube-plugin-chapters",
+  "bugs": "https://github.com/samlich/peertube-plugin-chapters/issues",
   "engine": {
     "peertube": ">=4.2.0"
   },
